# Vision_QC

./: .env.local  .gitignore  LICENSE  README.md  RETRAINING_FEATURE_DOCUMENTATION.md  SETUP_GUIDE.md  index.html  package-lock.json  package.json  vite.config.js
backend/: .env  README.md  db_operations.py  fastapi_service.py  index.js  init-db.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test-db.js  test-password-reset-flow.js  train_plantvillage.py
backend/models/plantdoc-52/: inference_tuning.json  training_report.json
backend/models/plantdoc-52-v2/: config.json
backend/models/plantvillage-15/: config.json  training_report.json
backend/reports/: images-report-2026-02-12T13-22-28-957Z.csv  users-report-2026-02-12T13-21-50-790Z.csv  users-report-2026-02-12T13-22-09-007Z.json
mobile/: .env.example  App.js  README.md  app.json  package-lock.json  package.json
src/: App.jsx  App.tsx  index.css
src/components/: APIDocumentation.jsx  APIDocumentation.tsx  BookmarksScreen.jsx  BookmarksScreen.tsx  ChatScreen.jsx  ChatScreen.tsx  ForgotPasswordScreen.jsx  ForgotPasswordScreen.tsx  HistoryScreen.jsx  HistoryScreen.tsx  HomeScreen.jsx  HomeScreen.tsx  LoginScreen.jsx  LoginScreen.tsx  PaymentScreen.jsx  PaymentScreen.tsx  ProfileScreen.jsx  ProfileScreen.tsx  RegisterScreen.jsx  RegisterScreen.tsx  ResetPasswordScreen.jsx  ResultScreen.jsx  ResultScreen.tsx  SEOHead.jsx  SEOHead.tsx  SplashScreen.jsx  SplashScreen.tsx  UploadScreen.jsx  UploadScreen.tsx
src/database/: schema.sql
src/utils/: api.js  api.ts  predictionDecision.js
(+46 files in other folders)
